--- a/theme/html/layout.html
+++ b/theme/html/layout.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{{ doctype }}
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
@@ -6,8 +6,9 @@
     {{ header }}
   </head>
   <body data-type="book">
-  <div id="container">
+  <div id="container" class="row-fluid">
+	<div class="span8 offset2">
     {{ content }}
-  </div>
+    </div></div>
   </body>
 </html>
