--- a/theme/html/layout.html
+++ b/theme/html/layout.html
@@ -1,14 +1,8 @@
-{{ doctype }}
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <meta charset="utf-8" />
-    <title>{{ title }}</title>
-    {{ header }}
-  </head>
-  <body data-type="book">
-  <div id="container" class="row-fluid">
-	<div class="span8 offset2">
-    {{ content }}
-    </div></div>
-  </body>
-</html>
+<p>{{ doctype }}</p>
+<meta charset="utf-8" />
+<title></title>
+<p>{{ header }}</p>
+
+<div id="container">
+{{ content }}
+</div>
