--- a/theme/html/layout.html
+++ b/theme/html/layout.html
@@ -6,7 +6,18 @@
     {{ header }}
   </head>
   <body data-type="book">
-  <div id="container">
+
+  	<div class="navbar navbar-fixed-top">
+  	<div class="navbar-inner">
+  		<a class="brand" href="http://oreilly.com" target="_blank"><img src="/images/logo-white.png" /></a>
+    <ul class="nav pull-right">
+    	<li><a href="/">Getting Started with Computer Vision</a></li>
+      <li class="divider-vertical"><a href="/index">Index</a></li>
+    </ul>
+</div>
+  </div>
+  
+  <div id="container" class="row-fluid">
     {{ content }}
   </div>
   </body>
