tweaking top nav

--- a/theme/html/layout.html
+++ b/theme/html/layout.html
@@ -11,12 +11,12 @@
   	<div class="navbar-inner">
   		<a class="brand" href="http://oreilly.com" target="_blank"><img src="/images/logo-white.png" /></a>
     <ul class="nav pull-right">
-    	<li><a href="/">Getting Started with Computer Vision</a></li>
-      <li class="divider-vertical"><a href="/index">Index</a></li>
+    	<li>Getting Started with Computer Vision</li>
+      <li class="divider-vertical">{{ toc_link }}</li>
     </ul>
 </div>
   </div>
-  
+
   <div id="container" class="row-fluid">
     {{ content }}
   </div>
