tweaking top nav

--- a/theme/html/layout.html
+++ b/theme/html/layout.html
@@ -9,9 +9,9 @@
 
   	<div class="navbar navbar-fixed-top">
   	<div class="navbar-inner">
-  		<a class="brand" href="http://oreilly.com" target="_blank"><img src="/images/logo-white.png" /></a>
+  		<a class="brand" href="http://oreilly.com" target="_blank"><img src="assets/images/logo-white.png" /></a>
     <ul class="nav pull-right">
-    	<li>Getting Started with Computer Vision</li>
+    	<li class="navbar-text">Getting Started with Computer Vision</li>
       <li class="divider-vertical">{{ toc_link }}</li>
     </ul>
 </div>
