--- a/book/index.html
+++ b/book/index.html
@@ -1,1 +1,45 @@
-This is where you type!
+<section data-type="sect1">
+<h1>Section Title</h1>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
+
+<p>Video will go here</p>
+
+<p>&nbsp;</p>
+
+<section data-type="sect2">
+<h2>Capture</h2>
+
+<p>Section content goes here</p>
+</section>
+
+<section data-type="sect2">
+<h2>Filter</h2>
+
+<p>Section content goes here</p>
+</section>
+
+<section data-type="sect2">
+<h2>Calibrate</h2>
+
+<p>Section content goes here</p>
+</section>
+
+<section data-type="sect2">
+<h2>Track</h2>
+
+<p>Section content goes here</p>
+</section>
+
+<section data-type="sect2">
+<h2>Train</h2>
+
+<p>Section content goes here</p>
+</section>
+</section>
+
+<ul>
+	<li>&nbsp;</li>
+</ul>
