--- a/theme/html/layout.html
+++ b/theme/html/layout.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <title>{{ title }}</title>
     {{ header }}
+    <link href="http://vjs.zencdn.net/4.1/video-js.css" rel="stylesheet">
+    <script src="http://vjs.zencdn.net/4.1/video.js"></script>
   </head>
   <body data-type="book">
 
