--- a/book/index.html
+++ b/book/index.html
@@ -5,7 +5,10 @@
 
 <p>&nbsp;</p>
 
-<p>Video will go here</p>
+<video id="example_video_1" class="video-js vjs-default-skin"
+  controls preload="auto" width="640" height="264">
+ <source src="https://s3.amazonaws.com/orm-atlas-media/Kinograph_promo_V2.mp4" type='video/mp4' />
+</video>
 
 <p>&nbsp;</p>
 
