--- a/book/index.html
+++ b/book/index.html
@@ -1,14 +1,11 @@
 <section data-type="sect1">
-<h1>Section Title</h1>
+<h1>Introduction</h1>
 
 <p>&nbsp;</p>
 
 <p>&nbsp;</p>
 
-<video id="example_video_1" class="video-js vjs-default-skin"
-  controls preload="auto" width="640" height="264">
- <source src="https://s3.amazonaws.com/orm-atlas-media/Kinograph_promo_V2.mp4" type='video/mp4' />
-</video>
+<video class="video-js vjs-default-skin" controls="" height="264" id="example_video_1" preload="auto" width="640"><source src="https://s3.amazonaws.com/orm-atlas-media/Kinograph_promo_V2.mp4" type="video/mp4" /></video>
 
 <p>&nbsp;</p>
 
