Closing tag for <link>

--- a/theme/html/layout.html
+++ b/theme/html/layout.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>{{ title }}</title>
     {{ header }}
-    <link href="http://vjs.zencdn.net/4.1/video-js.css" rel="stylesheet">
+    <link href="http://vjs.zencdn.net/4.1/video-js.css" rel="stylesheet"/>
     <script src="http://vjs.zencdn.net/4.1/video.js"></script>
   </head>
   <body data-type="book">
