minor layout adjustments

--- a/theme/html/layout.html
+++ b/theme/html/layout.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>{{ title }}</title>
     {{ header }}
-    <link href="http://vjs.zencdn.net/4.1/video-js.css" rel="stylesheet"/>
+    <link href="http://vjs.zencdn.net/4.1/video-js.css" rel="stylesheet" />
     <script src="http://vjs.zencdn.net/4.1/video.js"></script>
   </head>
   <body data-type="book">
@@ -13,7 +13,7 @@
   	<div class="navbar-inner">
   		<a class="brand" href="http://oreilly.com" target="_blank"><img src="assets/images/logo-white.png" /></a>
     <ul class="nav pull-right">
-    	<li class="navbar-text">Getting Started with Computer Vision</li>
+    	<li class="navbar-text">{{ title }}</li>
       <li class="divider-vertical">{{ toc_link }}</li>
     </ul>
 </div>
