adding nav links

--- a/theme/html/layout.html
+++ b/theme/html/layout.html
@@ -21,6 +21,11 @@
 
   <div id="container" class="row-fluid">
     {{ content }}
+
+    <ul class="navigation">
+      <li class="prev">&#8249; {{prev_link}}</li>
+      <li class="next">{{next_link}} &#8250;</li>
+    </ul>
   </div>
   </body>
 </html>
