--- a/book/index.html
+++ b/book/index.html
@@ -1,13 +1,39 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+  <head>
+    <meta charset="utf-8"/>
+    <title>Getting Started with Computer Vision</title>
+    <link rel="stylesheet" type="text/css" href="theme/html/html.css"/>
+<link rel="stylesheet" type="text/css" href="assets/bootstrap.min.css"/>
+<link rel="stylesheet" type="text/css" href="assets/bootstrap-responsive.min.css"/>
+<link rel="stylesheet" type="text/css" href="assets/application.css"/>
+<link rel="stylesheet" type="text/css" href="assets/styles.css"/>
+<link rel="stylesheet" type="text/css" href="assets/widget.css"/>
+<script src="assets/jquery.min.js" type="text/javascript"> </script>
+<script src="assets/bootstrap.min.js" type="text/javascript"> </script>
+<script src="assets/widget.js" type="text/javascript"> </script>
+<script src="assets/quiz.js" type="text/javascript"> </script>
+    <link href="http://vjs.zencdn.net/4.1/video-js.css" rel="stylesheet"/>
+    <script src="http://vjs.zencdn.net/4.1/video.js"> </script>
+  </head>
+  <body data-type="book">
+
+  	<div class="navbar navbar-fixed-top">
+  	<div class="navbar-inner">
+  		<a class="brand" href="http://oreilly.com" target="_blank"><img src="assets/images/logo-white.png"/></a>
+    <ul class="nav pull-right">
+    	<li class="navbar-text">Getting Started with Computer Vision</li>
+      <li class="divider-vertical"/>
+    </ul>
+</div>
+  </div>
+
+  <div id="container" class="row-fluid">
+
 <section data-type="sect1">
 <h1>Introduction</h1>
 
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
 <video class="video-js vjs-default-skin" controls="" height="264" id="example_video_1" preload="auto" width="640"><source src="https://s3.amazonaws.com/orm-atlas-media/Kinograph_promo_V2.mp4" type="video/mp4" /></video>
-
-<p>&nbsp;</p>
 
 <section data-type="sect2">
 <h2>Capture</h2>
@@ -70,6 +96,6 @@
 </section>
 </section>
 
-<ul>
-	<li>&nbsp;</li>
-</ul>
+  </div>
+  </body>
+</html>
