fixing up index file manually

--- a/book/index.html
+++ b/book/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8"/>
     <title>Getting Started with Computer Vision</title>
-    <link rel="stylesheet" type="text/css" href="theme/html/html.css"/>
 <link rel="stylesheet" type="text/css" href="assets/bootstrap.min.css"/>
 <link rel="stylesheet" type="text/css" href="assets/bootstrap-responsive.min.css"/>
 <link rel="stylesheet" type="text/css" href="assets/application.css"/>
@@ -28,17 +27,25 @@
 </div>
   </div>
 
-  <div id="container" class="row-fluid">
+  <div id="container" class="splash row-fluid">
 
 <section data-type="sect1">
-<h1>Introduction</h1>
+<h1>Getting Started with Computer Vision</h1>
 
-<video class="video-js vjs-default-skin" controls="" height="264" id="example_video_1" preload="auto" width="640"><source src="https://s3.amazonaws.com/orm-atlas-media/Kinograph_promo_V2.mp4" type="video/mp4" /></video>
+<div class="centered bottomspace">
+		<ul>
+			<li class="btn"><a href="http://borenstein-opencv-processing-book.s3.amazonaws.com/ch01.html" class="active">Read Now</a></li>
+			<li class="btn"><a href="https://github.com/atduskgreg/opencv-processing-book">Fork on Github</a></li>
+		</ul>
+</div>
 
 <section data-type="sect2">
-<h2>Capture</h2>
+<h2>Introduction</h2>
 
-<p>Section content goes here</p>
+<div class="centered">
+<video class="video-js vjs-default-skin" controls="" id="example_video_1" preload="auto" width="640" height="400"><source src="http://orm-atlas-media.s3.amazonaws.com/Kinograph_promo_V2.mp4" type="video/mp4" /></video>
+</div>
+
 </section>
 
 <section data-type="sect2">
@@ -94,8 +101,8 @@
 	<li>Neural Networks in OpenCV</li>
 </ul>
 </section>
-</section>
 
+</section>
   </div>
   </body>
 </html>
