--- a/book/index.html
+++ b/book/index.html
@@ -1,52 +1,31 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <title>Getting Started with Computer Vision</title>
-<link rel="stylesheet" type="text/css" href="assets/bootstrap.min.css"/>
-<link rel="stylesheet" type="text/css" href="assets/bootstrap-responsive.min.css"/>
-<link rel="stylesheet" type="text/css" href="assets/application.css"/>
-<link rel="stylesheet" type="text/css" href="assets/styles.css"/>
-<link rel="stylesheet" type="text/css" href="assets/widget.css"/>
-<script src="assets/jquery.min.js" type="text/javascript"> </script>
-<script src="assets/bootstrap.min.js" type="text/javascript"> </script>
-<script src="assets/widget.js" type="text/javascript"> </script>
-<script src="assets/quiz.js" type="text/javascript"> </script>
-    <link href="http://vjs.zencdn.net/4.1/video-js.css" rel="stylesheet"/>
-    <script src="http://vjs.zencdn.net/4.1/video.js"> </script>
-  </head>
-  <body data-type="book">
-
-  	<div class="navbar navbar-fixed-top">
-  	<div class="navbar-inner">
-  		<a class="brand" href="http://oreilly.com" target="_blank"><img src="assets/images/logo-white.png"/></a>
-    <ul class="nav pull-right">
-    	<li class="navbar-text">Getting Started with Computer Vision</li>
-      <li class="divider-vertical"/>
-    </ul>
+<!--?xml version="1.0" encoding="UTF-8"?-->
+<meta charset="utf-8" />
+<title></title>
+<link href="assets/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="assets/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
+<link href="assets/application.css" rel="stylesheet" type="text/css" />
+<link href="assets/styles.css" rel="stylesheet" type="text/css" />
+<link href="assets/widget.css" rel="stylesheet" type="text/css" /><script src="assets/jquery.min.js" type="text/javascript"> </script><script src="assets/bootstrap.min.js" type="text/javascript"> </script><script src="assets/widget.js" type="text/javascript"> </script><script src="assets/quiz.js" type="text/javascript"> </script>
+<link href="http://vjs.zencdn.net/4.1/video-js.css" rel="stylesheet" /><script src="http://vjs.zencdn.net/4.1/video.js"> </script>
+<div class="navbar navbar-fixed-top">
+<div class="navbar-inner"><a class="brand" href="http://oreilly.com" target="_blank"><img src="assets/images/logo-white.png" /></a>
+<ul class="nav pull-right">
+	<li class="navbar-text">Getting Started with Computer Vision</li>
+	<li class="divider-vertical">&nbsp;</li>
+</ul>
 </div>
-  </div>
+</div>
 
-  <div id="container" class="splash row-fluid">
-
+<div class="splash row-fluid" id="container">
 <section data-type="sect1">
 <h1>Getting Started with Computer Vision</h1>
 
 <div class="centered bottomspace">
-		<ul>
-			<li class="btn"><a href="http://borenstein-opencv-processing-book.s3.amazonaws.com/ch01.html" class="active">Read Now</a></li>
-			<li class="btn"><a href="https://github.com/atduskgreg/opencv-processing-book">Fork on Github</a></li>
-		</ul>
+<ul>
+	<li class="btn"><a class="active" href="http://borenstein-opencv-processing-book.s3.amazonaws.com/ch01.html">Read Now</a></li>
+	<li class="btn"><a href="https://github.com/atduskgreg/opencv-processing-book">Fork on Github</a></li>
+</ul>
 </div>
-
-<section data-type="sect2">
-<h2>Introduction</h2>
-
-<div class="centered">
-<video class="video-js vjs-default-skin" controls="" id="example_video_1" preload="auto" width="640" height="400"><source src="http://orm-atlas-media.s3.amazonaws.com/Kinograph_promo_V2.mp4" type="video/mp4" /></video>
-</div>
-
-</section>
 
 <section data-type="sect2">
 <h2>Filter</h2>
@@ -101,8 +80,5 @@
 	<li>Neural Networks in OpenCV</li>
 </ul>
 </section>
-
 </section>
-  </div>
-  </body>
-</html>
+</div>
