--- a/book/index.html
+++ b/book/index.html
@@ -8,7 +8,7 @@
 <link href="assets/widget.css" rel="stylesheet" type="text/css" /><script src="assets/jquery.min.js" type="text/javascript"> </script><script src="assets/bootstrap.min.js" type="text/javascript"> </script><script src="assets/widget.js" type="text/javascript"> </script><script src="assets/quiz.js" type="text/javascript"> </script>
 <link href="http://vjs.zencdn.net/4.1/video-js.css" rel="stylesheet" /><script src="http://vjs.zencdn.net/4.1/video.js"> </script>
 <div class="navbar navbar-fixed-top">
-<div class="navbar-inner"><a class="brand" href="http://oreilly.com" target="_blank"><img src="assets/images/logo-white.png" /></a>
+<div class="navbar-inner"><a class="brand" data-original-title="" href="http://oreilly.com" target="_blank" title=""><img src="assets/images/logo-white.png" /></a>
 <ul class="nav pull-right">
 	<li class="navbar-text">Getting Started with Computer Vision</li>
 	<li class="divider-vertical">&nbsp;</li>
